force-app/main/default/objects/CM_SearchContactTiers__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Nom du grand compte dans mulesoft</description>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>