force-app/main/default/objects/CM_SearchContactTiers__mdt/fields/SearchByDateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>SearchByDateOfBirth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search By Date Of Birth ?</label>
    <type>Checkbox</type>
</CustomField>