force-app/main/default/objects/CM_SearchContactTiers__mdt/fields/SearchByFirstName__c.field-meta.xml
<CustomField>
    <fullName>SearchByFirstName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search By First Name</label>
    <type>Checkbox</type>
</CustomField>