force-app/main/default/objects/CM_SearchContactTiers__mdt/fields/SearchByLastName__c.field-meta.xml
<CustomField>
    <fullName>SearchByLastName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search By Last Name ?</label>
    <type>Checkbox</type>
</CustomField>