force-app/main/default/objects/CM_SearchContactTiers__mdt/fields/SearchByPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>SearchByPolicyNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search By Policy Number</label>
    <type>Checkbox</type>
</CustomField>